--- a/Travel_website/ContactFormStyles.css
+++ b/Travel_website/ContactFormStyles.css
@@ -1,3 +1,55 @@
 .form-container{
     margin: 14rem 6rem 4rem 6rem;
+    color: #2a2a2a;
+}
+
+.form-container form{
+    padding-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: auto;
+}
+
+.form-container input{
+    width: 100%;
+    height: 3rem;
+    padding: 0 1rem;
+    margin-bottom: 2rem;
+    border-radius: .3rem;
+    border: 1p soli #2a2a2a;
+}
+
+.form-container  textarea {
+    padding: 1rem;
+    margin-bottom: 2rem;
+    border-radius: 0.3rem;
+    border: 1px solid #2a2a2a;
+}
+
+.form-container button{
+    display: inline;
+    padding: 1rem;
+    font-size: 1rem;
+    border-radius: 10px;
+}
+
+.form-container button:hover{
+    background: #4792b4;
+    color: #fff;
+    font-weight: 600;
+    border: none;
+}
+
+
+@media screen and (max-width: 850px){
+    .form-container{
+        margin: 4rem 2rem;
+        color: #2a2a2a;
+    }
+
+    .form-container form{
+        width: 90%;
+        margin-top: 2rem;
+    }
 }
