--- a/gym/src/components/Hero/Hero.css
+++ b/gym/src/components/Hero/Hero.css
@@ -156,6 +156,41 @@
 
 .hero-image{
     position: absolute;
-    top: 10rem;
+    top: 12rem;
     right: 8rem;
+    width: 60vw;
+    height: 70vh;
+}
+
+
+.calories{
+    display: flex;
+    gap: 2rem;
+    background-color: var(--coloryCard);
+    border-radius: 5px;
+    padding: 1rem;
+    width: 17vw;
+    position: absolute;
+    top: 43rem;
+    right: 38rem;
+}
+
+.calories > img {
+    width: 6vw;
+    height: 8vh;
+}
+
+.calories > div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.calories>div>:nth-child(1){
+    color: var(--gray);
+}
+
+.calories>div>:nth-child(2){
+    color: var(--gray);
+    font-size: 1.5rem;
 }
