--- a/gym/src/App.css
+++ b/gym/src/App.css
@@ -2,10 +2,10 @@
   --lightgray: #D9D9D9;
   --gray: #9c9c9c;
   --orange:  #f48915;
-  --darkGrey: #464D53;
+  --darkGrey: #464d535c;
   --coloryCard: #656565;
   --planCard: linear-gradient(210.41deg, #fa5042 1.14%, #ffa739 100.75%);
-  --appColor: #3c3f45;
+  --appColor: #1415169a;
 }
 
 
