--- a/gym/src/components/Hero/Hero.css
+++ b/gym/src/components/Hero/Hero.css
@@ -162,6 +162,14 @@
     height: 70vh;
 }
 
+.hero-image-back{
+    position: absolute;
+    top: 15rem;
+    right: 23rem;
+    z-index: -1;
+    width: 15rem;
+}
+
 
 .calories{
     display: flex;
